--- a/starter_code hmwk 4/layout_challenge/magazine.html
+++ b/starter_code hmwk 4/layout_challenge/magazine.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="magazine.css" media="screen" type="text/css" />
 </head>
 <body> 
-	<section>
+	<section class="Title">
 		<h1>Magazine</h1>
 	</section>
 	<header>
@@ -24,11 +24,11 @@
 	<div class="top">
 		<p>top</p>
 	</div>
-	<div class="middle">
+	<div class="clearfix">
 		<p class="middle1">middle - big</p>
 		<p class="middle2">middle - small</p>
 	</div>
-	<section>
+	<section class="clearfix">
 		<p class="A">A</p>
 		<p class="B">B</p>
 		<p class="C">C</p>
