--- a/starter_code hmwk 4/layout_challenge/two-column.html
+++ b/starter_code hmwk 4/layout_challenge/two-column.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
 
-<link rel="stylesheet" href="two-column.css" media="screen" type="text/css" />
+<link rel="stylesheet" href="two-column.css" media="screen" type="text/css"/>
 
-<head>
-	<title>Two-Column</title>
-</head>
-<body>
-<section>
-	<h1>Two-Column</h1>
-</section>>
-<div id="Header">
-	<p>Header</p>
-</div>
-<div id="One">
-	<p>One</p>
-</div>
-<div id="Two">
-	<p>Two</p>
-</div>
-<div id="Footer">
-	<p>Footer</p>
-</div>
-</body>
+	<head>
+		<title>Two-Column</title>
+	</head>
+	<body>
+		<section>
+			<h1>Two-Column</h1>
+		</section>
+		<header>
+			<p>Header</p>
+		</header>
+		<div class="One">
+			<p>One</p>
+		</div>
+		<div class="Two">
+			<p>Two</p>
+		</div>
+		<footer>
+			<p>Footer</p>
+		</footer>
+	</body>
 </html>
