--- a/starter_code hmwk 4/layout_challenge/simple-marketing.html
+++ b/starter_code hmwk 4/layout_challenge/simple-marketing.html
@@ -3,33 +3,33 @@
 
 <link rel="stylesheet" href="simple-marketing.css" media="screen" type="text/css" />
 
-<head>
-	<title>Simple Marketing</title>
-</head>
-<body>
-	<section>
-		<h1> Simple Marketing</h1>
-	</section>
-	<div id="Header">
-		<p>Header</p>
-	</div>
-	<div id="One">
-		<p>One</p>
-	</div>
-	<div id="Two">
-		<p>Two</p>
-	</div>
-	<div id="A">
-		<p>A</p>
-	</div>
-	<div id="B">
-		<p>B</p>
-	</div>	
-	<div id="C">
-		<p>C</p>
-	</div>
-	<div id="Footer">
-		<p>Footer</p>
-	</div>
-</body>
+	<head>
+		<title>Simple Marketing</title>
+	</head>
+	<body>
+		<section>
+			<h1> Simple Marketing</h1>
+		</section>
+		<header>
+			<p>Header</p>
+		</header>
+		<div class="One">
+			<p>One</p>
+		</div>
+		<div class="Two">
+			<p>Two</p>
+		</div>
+		<div class="A">
+			<p>A</p>
+		</div>
+		<div class="B">
+			<p>B</p>
+		</div>	
+		<div class="C">
+			<p>C</p>
+		</div>
+		<footer>
+			<p>Footer</p>
+		</footer>
+	</body>
 </html>
