--- a/starter_code hmwk 4/layout_challenge/three-column.html
+++ b/starter_code hmwk 4/layout_challenge/three-column.html
@@ -3,27 +3,27 @@
 
 <link rel="stylesheet" href="three-column.css" media="screen" type="text/css" />
 
-<head>
-	<title>Three-Column</title>
-</head>
-<body>
-	<section>
-		<h1>Three-Column</h1>
-	</section>
-	<div id="Header">
-		<p>Header</p>
-	</div>
-	<div id="One">
-		<p>One</p>
-	</div>
-	<div id="Two">
-		<p>Two</p>
-	</div>
-	<div id="Three">
-		<p>Three</p>
-	</div>
-	<div id="Footer">
-		<p>Footer</p>
-	</div>
-</body>
+	<head>
+		<title>Three-Column</title>
+	</head>
+	<body>
+		<section>
+			<h1>Three-Column</h1>
+		</section>
+		<header>
+			<p>Header</p>
+		</header>
+		<div class="One">
+			<p>One</p>
+		</div>
+		<div class="Two">
+			<p>Two</p>
+		</div>
+		<div class="Three">
+			<p>Three</p>
+		</div>
+		<footer>
+			<p>Footer</p>
+		</footer>
+	</body>
 </html>
